--- a/app/src/main/res/layout/list_item_receipt.xml
+++ b/app/src/main/res/layout/list_item_receipt.xml
@@ -10,18 +10,29 @@
     tools:layout_editor_absoluteY="25dp">
 
     <TextView
-        android:id="@+id/crime_title"
+        android:id="@+id/receipt_title"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="16dp"
-        android:text="Crime Title"
+        android:text="Receipt Title"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/crime_solved"
+        app:layout_constraintRight_toLeftOf="@id/receipt_solved"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/receipt_shop_name"
+        android:textColor="@android:color/black"
+        android:textSize="18dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="16dp"
+        android:text="Shop Name"/>
 
     <TextView
         android:id="@+id/crime_date"
@@ -32,11 +43,11 @@
         android:layout_marginTop="8dp"
         android:text="Crime Date"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/crime_solved"
-        app:layout_constraintTop_toBottomOf="@id/crime_title" />
+        app:layout_constraintRight_toLeftOf="@id/receipt_solved"
+        app:layout_constraintTop_toBottomOf="@id/receipt_title" />
 
     <ImageView
-        android:id="@+id/crime_solved"
+        android:id="@+id/receipt_solved"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@android:drawable/ic_secure"
